--- a/iCountDown/iCountDown/Base.lproj/Main.storyboard
+++ b/iCountDown/iCountDown/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -14,6 +15,9 @@
         </array>
         <array key="Helvetica.ttc">
             <string>Helvetica-Bold</string>
+        </array>
+        <array key="Palatino.ttc">
+            <string>Palatino-Roman</string>
         </array>
     </customFonts>
     <scenes>
@@ -26,21 +30,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="30 Seconds" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="erJ-yC-Xlg">
-                                <rect key="frame" x="41" y="71" width="293" height="81"/>
+                                <rect key="frame" x="41" y="136" width="293" height="81"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="50"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="30" minValue="5" maxValue="60" translatesAutoresizingMaskIntoConstraints="NO" id="UOi-GZ-z3D">
-                                <rect key="frame" x="39" y="191" width="297" height="30"/>
+                                <rect key="frame" x="39" y="256" width="297" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <connections>
                                     <action selector="slider:" destination="BYZ-38-t0r" eventType="valueChanged" id="Ta0-1a-rIY"/>
                                 </connections>
                             </slider>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="He0-yp-hPK">
-                                <rect key="frame" x="53" y="293" width="107" height="62"/>
+                                <rect key="frame" x="53" y="358" width="107" height="62"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="27"/>
@@ -57,7 +61,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q38-a7-P3f">
-                                <rect key="frame" x="212" y="293" width="107" height="62"/>
+                                <rect key="frame" x="212" y="358" width="107" height="62"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="27"/>
@@ -73,8 +77,22 @@
                                     <action selector="stop:" destination="BYZ-38-t0r" eventType="touchUpInside" id="p89-Ah-XYs"/>
                                 </connections>
                             </button>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" barStyle="black" translatesAutoresizingMaskIntoConstraints="NO" id="oIa-IT-kaO">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="iCountDown" id="KoK-hM-DQt">
+                                        <barButtonItem key="rightBarButtonItem" title="About" id="f6L-CT-IFl">
+                                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <connections>
+                                                <segue destination="oCd-6l-M0u" kind="modal" id="Azd-ei-UCM"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
-                        <color key="backgroundColor" red="0.40000000600000002" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
@@ -88,5 +106,95 @@
             </objects>
             <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
         </scene>
+        <!--Developer-->
+        <scene sceneID="ghj-Tp-ciB">
+            <objects>
+                <viewController id="oCd-6l-M0u" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="IJX-64-95R">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About App" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uHf-Mm-Vlr">
+                                <rect key="frame" x="16" y="20" width="343" height="98"/>
+                                <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="63"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="iCountDown" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zv0-Od-V2Z">
+                                <rect key="frame" x="103.5" y="371" width="168" height="32"/>
+                                <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="29"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Version 1.1 (017.12)" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wbx-RI-eyB">
+                                <rect key="frame" x="16" y="434" width="343" height="23"/>
+                                <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Hot30_Countdown_Logo" translatesAutoresizingMaskIntoConstraints="NO" id="p3P-an-va6">
+                                <rect key="frame" x="16" y="139" width="343" height="208"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="208" id="5Ac-An-8h0"/>
+                                    <constraint firstAttribute="width" secondItem="p3P-an-va6" secondAttribute="height" multiplier="343:208" id="Rp8-Gg-Fsd"/>
+                                    <constraint firstAttribute="width" constant="343" id="dTr-va-q76"/>
+                                </constraints>
+                            </imageView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" barStyle="blackTranslucent" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7a7-ta-Lrw">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <items>
+                                    <barButtonItem title="Main Menu" id="GFX-Me-2m5">
+                                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <segue destination="BYZ-38-t0r" kind="modal" id="cKo-fs-Ma2"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="erA-Nl-zRT">
+                                <rect key="frame" x="16" y="481" width="343" height="61"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="61" id="tew-wA-gGX"/>
+                                </constraints>
+                                <string key="text">Copyright © 2017, Fauzee Corp.
+ All Rights Reserved.</string>
+                                <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="uHf-Mm-Vlr" firstAttribute="leading" secondItem="Av5-yl-Xdk" secondAttribute="leading" constant="16" id="4qj-OJ-XYz"/>
+                            <constraint firstItem="p3P-an-va6" firstAttribute="top" secondItem="uHf-Mm-Vlr" secondAttribute="bottom" constant="21" id="7mJ-9R-ASa"/>
+                            <constraint firstItem="p3P-an-va6" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="erA-Nl-zRT" secondAttribute="trailing" id="Bm0-03-11B"/>
+                            <constraint firstItem="erA-Nl-zRT" firstAttribute="centerX" secondItem="7a7-ta-Lrw" secondAttribute="centerX" id="DaR-dL-NhD"/>
+                            <constraint firstItem="p3P-an-va6" firstAttribute="trailing" secondItem="Wbx-RI-eyB" secondAttribute="trailing" id="H8Q-dP-nLi"/>
+                            <constraint firstItem="p3P-an-va6" firstAttribute="leading" secondItem="Wbx-RI-eyB" secondAttribute="leading" id="J30-ZN-JVn"/>
+                            <constraint firstItem="7a7-ta-Lrw" firstAttribute="leading" secondItem="IJX-64-95R" secondAttribute="leading" id="JDy-g6-l0n"/>
+                            <constraint firstItem="erA-Nl-zRT" firstAttribute="top" secondItem="Wbx-RI-eyB" secondAttribute="bottom" constant="24" id="Ku2-OE-pKL"/>
+                            <constraint firstItem="p3P-an-va6" firstAttribute="centerX" secondItem="7a7-ta-Lrw" secondAttribute="centerX" id="Rcr-st-znY"/>
+                            <constraint firstItem="p3P-an-va6" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="erA-Nl-zRT" secondAttribute="leading" id="V5J-F8-66u"/>
+                            <constraint firstItem="Zv0-Od-V2Z" firstAttribute="top" secondItem="p3P-an-va6" secondAttribute="bottom" constant="24" id="ZJi-9n-1aW"/>
+                            <constraint firstItem="p3P-an-va6" firstAttribute="leading" secondItem="uHf-Mm-Vlr" secondAttribute="leading" id="d4Q-oI-DWE"/>
+                            <constraint firstItem="p3P-an-va6" firstAttribute="top" secondItem="IJX-64-95R" secondAttribute="top" constant="139" id="gSF-46-mzZ"/>
+                            <constraint firstItem="uHf-Mm-Vlr" firstAttribute="top" secondItem="Av5-yl-Xdk" secondAttribute="top" id="iG7-dy-Hcb"/>
+                            <constraint firstItem="p3P-an-va6" firstAttribute="centerX" secondItem="Zv0-Od-V2Z" secondAttribute="centerX" id="kyh-50-qZQ"/>
+                            <constraint firstItem="Av5-yl-Xdk" firstAttribute="trailing" secondItem="uHf-Mm-Vlr" secondAttribute="trailing" constant="16" id="pqk-52-prL"/>
+                            <constraint firstItem="7a7-ta-Lrw" firstAttribute="top" secondItem="erA-Nl-zRT" secondAttribute="bottom" constant="81" id="sO7-Tm-Hge"/>
+                            <constraint firstAttribute="bottom" secondItem="erA-Nl-zRT" secondAttribute="bottom" constant="125" id="uiK-gw-a1r"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Av5-yl-Xdk"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Developer" image="manager" selectedImage="manager" id="8h5-Kr-aOA"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SNr-zn-hbU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1072.8" y="133.5832083958021"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="Hot30_Countdown_Logo" width="1130" height="345"/>
+        <image name="manager" width="16" height="16"/>
+    </resources>
 </document>
